--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,111 @@
+
+<!-- header section -->
+ <header>
+   <div class="user-profile">
+      <img src="assets/images/icons/person-cog.svg" alt="user profile" />
+   </div>
+ </header>
 <!-- code for product tiles section  -->
 <section id="product-tiles">
   <div class="product-container">
+
     <div class="product-item">
-      <img src=https://placehold.co/400" alt="Product 1">
+      <picture>
+        <source media="(max-width: 600px)" srcset="assets/images/product/burberry.png">
+        <source srcset="assets/images/product/burberry.png">
+      
+        <!-- Fallback img tag for browsers that do not support picture element -->
+        <img src="assets/images/product/burberry.png" alt="Product Image">
+      </picture>
       <div class="product-details">
-        <h3>Product 1</h3>
-        <p>Description of Product 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <button>Add to Cart</button>
+        <span class="product-details-price">RRP £129.99</span>
+        <h3 class="product-details-name"><span class="brand-name">Burberry</span> Flowy Dress with pink and gold</h3>
+        <p class="product-details-size">Size 4</p>
+        <p class="product-details-rental">£12.00 Rental</p>
       </div>
     </div>
+
+    <div class="product-item">
+      <picture>
+        <source media="(max-width: 600px)" srcset="assets/images/product/desacada.png">
+        <source srcset="assets/images/product/desacada.png">
+      
+        <!-- Fallback img tag for browsers that do not support picture element -->
+        <img src="assets/images/product/desacada.png" alt="Product Image">
+      </picture>
+      <div class="product-details">
+        <span class="product-details-price">RRP £129.99</span>
+        <h3 class="product-details-name"><span class="brand-name">Prada</span>Beach dress</h3>
+        <p class="product-details-size">Size 4</p>
+        <p class="product-details-rental">£12.00 Rental</p>
+      </div>
+    </div>
+
+    <div class="product-item">
+      <picture>
+        <source media="(max-width: 600px)" srcset="assets/images/product/bhandage.png">
+        <source srcset="assets/images/product/bhandage.png">
+      
+        <!-- Fallback img tag for browsers that do not support picture element -->
+        <img src="assets/images/product/bhandage.png" alt="Product Image">
+      </picture>
+      <div class="product-details">
+        <span class="product-details-price">RRP £129.99</span>
+        <h3 class="product-details-name"><span class="brand-name">Bhandage</span> Red dress for evening wear</h3>
+        <p class="product-details-size">Size 4</p>
+        <p class="product-details-rental">£12.00 Rental</p>
+      </div>
+    </div>
+
+    <div class="product-item">
+      <picture>
+      
+        <source media="(max-width: 600px)" srcset="assets/images/product/prada-wedding.png">
+        <source srcset="assets/images/product/prada-wedding.png">
+        <!-- Fallback img tag for browsers that do not support picture element -->
+        <img src="assets/images/product/prada-wedding.png" alt="Product Image">
+      </picture>
+      <div class="product-details">
+        <span class="product-details-price">RRP £129.99</span>
+        <h3 class="product-details-name"><span class="brand-name">Prada</span> Prada Wedding guest</h3>
+        <p class="product-details-size">Size 4</p>
+        <p class="product-details-rental">£12.00 Rental</p>
+      </div>
+    </div>
+
+    <div class="product-item">
+      <picture>
+        <source media="(max-width: 600px)" srcset="assets/images/product/ansell.png">
+        <source srcset="assets/images/product/ansell.png">
+      
+        <!-- Fallback img tag for browsers that do not support picture element -->
+        <img src="assets/images/product/ansell.png" alt="Product Image">
+      </picture>
+      <div class="product-details">
+        <span class="product-details-price">RRP £129.99</span>
+        <h3 class="product-details-name"><span class="brand-name">Ansell</span> Nightwear</h3>
+        <p class="product-details-size">Size 4</p>
+        <p class="product-details-rental">£12.00 Rental</p>
+      </div>
+    </div>
+
+    <div class="product-item">
+      <picture>
+        <source media="(max-width: 600px)" srcset="assets/images/product/prada-beach.png">
+        <source srcset="assets/images/product/prada-beach.png">
+      
+        <!-- Fallback img tag for browsers that do not support picture element -->
+        <img src="assets/images/product/prada-beach.png" alt="Product Image">
+      </picture>
+      <div class="product-details">
+        <span class="product-details-price">RRP £129.99</span>
+        <h3 class="product-details-name"><span class="brand-name">Desacada</span> Desacada Summer dress</h3>
+        <p class="product-details-size">Size 4</p>
+        <p class="product-details-rental">£12.00 Rental</p>
+      </div>
+    </div>
+
     
-    <div class="product-item">
-      <img src="https://placehold.co/400" alt="Product 2">
-      <div class="product-details">
-        <h3>Product 2</h3>
-        <p>Description of Product 2. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="https://placehold.co/400" alt="Product 2">
-      <div class="product-details">
-        <h3>Product 2</h3>
-        <p>Description of Product 2. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="https://placehold.co/400" alt="Product 2">
-      <div class="product-details">
-        <h3>Product 2</h3>
-        <p>Description of Product 2. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="https://placehold.co/400" alt="Product 2">
-      <div class="product-details">
-        <h3>Product 2</h3>
-        <p>Description of Product 2. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="https://placehold.co/400" alt="Product 2">
-      <div class="product-details">
-        <h3>Product 2</h3>
-        <p>Description of Product 2. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
     
     <!-- Add more product items as needed -->
   </div>
